force-app/main/default/objects/fferpcore__SlackChannelEvent__e/fields/fferpcore__ChannelName__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ChannelName__c</fullName>
    <description>The name of the Slack channel.</description>
    <label>Channel Name</label>
    <length>21</length>
    <type>Text</type>
</CustomField>