force-app/main/default/objects/fferpcore__SlackChannelEvent__e/fields/fferpcore__Deleted__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Slack channel is deleted.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>